@@ -1,5 +1,6 @@
 # coding: utf-8
 require File.join(File.dirname(__FILE__), *%w[formtastic i18n])
+require File.join(File.dirname(__FILE__), *%w[formtastic railtie]) if defined?(::Rails::Railtie)
 
 module Formtastic #:nodoc:
 
